--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,12 @@
     "description": "\"remote test task\"",
     "minimum-stability": "stable",
     "require": {
-        "guzzlehttp/guzzle": "^7.2"
+        "guzzlehttp/guzzle": "^7.2",
+        "php-di/php-di": "^6.3"
     },
     "autoload": {
         "psr-4": {
-            "zutzuTechTask\\": ""
+            "ZutzuTechTask\\": ""
         }
     }
 }
